fix the article height on small screen

--- a/styles/products.scss
+++ b/styles/products.scss
@@ -94,7 +94,7 @@ main section article div .fa-dollar-sign:hover {
     font-size: 20px;
   }
   article {
-    height: 350px;
+    height: auto;
     overflow: scroll;
     text-overflow: ellipsis;
   }
